syntax = "proto3";

package notification;
option csharp_namespace = "Notification.Grpc";

service NotificationService {
  rpc SendEmail (SendRequest) returns (EmailReply);
  rpc ScheduleEmail (ScheduleRequest) returns (EmailReply);
}

message SendRequest {
  string email = 1;
  string subject = 3;
  string body = 4;
}

message ScheduleRequest {
  string email = 1;
  string subject = 3;
  string body = 4;
  string time_zone = 5;
}

message EmailReply {
  enum Status {
    Sent = 0;
    Postponed = 1;
  }
  
  Status status = 1;
}
